# friends

./: README.md  io.elementary.contacts.json  io.elementary.friends.json  meson.build
.github/workflows/: ci.yml  flatpak-x-checker.yml  gettext.yml  main.yml  merge.yml  release.yml
data/: HeaderBar.css  contacts.desktop.in  contacts.metainfo.xml.in  friends.appdata.xml.in  friends.desktop.in  friends.metainfo.xml.in  gresource.xml  gschema.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+159 more)
src/: Application.vala  IndividualView.vala  MainWindow.vala
src/Widgets/: Avatar.vala  ContactRow.vala  NameGroup.vala
src/Widgets/EmailGroup/: EmailGroup.vala  EmailGroupRow.vala
